--- a/index.html
+++ b/index.html
@@ -4,21 +4,183 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>AO Desarrollo web</title>
   </head>
   <body>
-    <nav>
-      <img height="150px" src="./img/Logo.jpeg" alt="" />
+    <!--SECCION DE INICIO-->
+    <section class="home">
+      <div class="content">
+        <header>
+          <div class="content-header">
+            <h1>/AO/</h1>
+            <nav class="navbar">
+              <ul class="links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
 
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
+            <!--ICONOS RESPONSIVE-->
+            <div class="icon-nav">
+              <i class="fa-solid fa-bars"></i>
+            </div>
 
-    <div class="content-main"></div>
+            <!--Iconos de redes sociales-->
+            <div class="redes">
+              <a
+                href="https://www.facebook.com/profile.php?id=100042817663563"
+                target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="https://www.instagram.com/_poncho07/" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://twitter.com/Alfonso_Ortiz07" target="_blank"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+            </div>
+          </div>
+        </header>
+        <div class="presentation">
+          <p class="bienvenida">Bievenidos</p>
+          <h2>Soy <span> Alfonso Ortiz</span> Desarrollador web</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla
+            aliquid veritatis impedit, quia deleniti eius iusto illum, iure
+            itaque facilis saepe! Modi, consequatur quae? Accusantium eligendi
+            odio voluptate labore?
+          </p>
+          <a href="#portafolio">Ir a portafolio</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECCION SOBRE MI -->
+    <section class="aboutme">
+      <div class="content-photo">
+        <img
+          src="img/312094563_839161184187796_2347894988372414200_n.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="about-me">
+        <p class="title-about-me">About me</p>
+        <h2>Hola, soy <span>Alfonso Ortiz</span></h2>
+        <h3>Desarrollador web</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad doloremque
+          voluptatum porro illo nesciunt nemo molestias expedita.
+        </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <a href="#">Descargar CV</a>
+      </div>
+    </section>
+
+    <!-- SECTION SERVICES -->
+
+    <section class="services">
+      <h3 class="title-services">MIS SERVICIOS</h3>
+
+      <div class="fila">
+        <div class="service">
+          <span class="icon"><i class="fa-solid fa-code"></i></span>
+          <h4>Website Design</h4>
+          <hr />
+          <ul class="services-tag">
+            <li>Web</li>
+            <li>Graphic</li>
+            <li>SEO</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
+            deserunt harum quo laudantium enim corrupti rerum.
+          </p>
+        </div>
+        <div class="service">
+          <span class="icon"><i class="fa-solid fa-code"></i></span>
+          <h4>Website Design</h4>
+          <hr />
+          <ul class="services-tag">
+            <li>Web</li>
+            <li>Graphic</li>
+            <li>SEO</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
+            deserunt harum quo laudantium enim corrupti rerum.
+          </p>
+        </div>
+        <div class="service">
+          <span class="icon"><i class="fa-solid fa-code"></i></span>
+          <h4>Website Design</h4>
+          <hr />
+          <ul class="services-tag">
+            <li>Web</li>
+            <li>Graphic</li>
+            <li>SEO</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
+            deserunt harum quo laudantium enim corrupti rerum.
+          </p>
+        </div>
+      </div>
+      <div class="fila">
+        <div class="service">
+          <span class="icon"><i class="fa-solid fa-code"></i></span>
+          <h4>Website Design</h4>
+          <hr />
+          <ul class="services-tag">
+            <li>Web</li>
+            <li>Graphic</li>
+            <li>SEO</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
+            deserunt harum quo laudantium enim corrupti rerum.
+          </p>
+        </div>
+        <div class="service">
+          <span class="icon"><i class="fa-solid fa-code"></i></span>
+          <h4>Website Design</h4>
+          <hr />
+          <ul class="services-tag">
+            <li>Web</li>
+            <li>Graphic</li>
+            <li>SEO</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
+            deserunt harum quo laudantium enim corrupti rerum.
+          </p>
+        </div>
+        <div class="service">
+          <span class="icon"><i class="fa-solid fa-code"></i></span>
+          <h4>Website Design</h4>
+          <hr />
+          <ul class="services-tag">
+            <li>Web</li>
+            <li>Graphic</li>
+            <li>SEO</li>
+          </ul>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
+            deserunt harum quo laudantium enim corrupti rerum.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
