--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar">
               <ul class="links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#aboutme">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -137,50 +137,84 @@
           </p>
         </div>
       </div>
-      <div class="fila">
-        <div class="service">
-          <span class="icon"><i class="fa-solid fa-code"></i></span>
-          <h4>Website Design</h4>
-          <hr />
-          <ul class="services-tag">
-            <li>Web</li>
-            <li>Graphic</li>
-            <li>SEO</li>
-          </ul>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
-            deserunt harum quo laudantium enim corrupti rerum.
-          </p>
+    </section>
+
+    <!-- SECTION SKILLS -->
+
+    <div class="content-skills">
+      <h3>HABILITIES</h3>
+      <div class="skills">
+        <div class="info">
+          <p><span class="list"></span>Html & Css</p>
+          <span class="porcentaje">50%</span>
         </div>
-        <div class="service">
-          <span class="icon"><i class="fa-solid fa-code"></i></span>
-          <h4>Website Design</h4>
-          <hr />
-          <ul class="services-tag">
-            <li>Web</li>
-            <li>Graphic</li>
-            <li>SEO</li>
-          </ul>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
-            deserunt harum quo laudantium enim corrupti rerum.
-          </p>
+        <div class="barra">
+          <div id="html" class="barra-progreso1"></div>
         </div>
-        <div class="service">
-          <span class="icon"><i class="fa-solid fa-code"></i></span>
-          <h4>Website Design</h4>
-          <hr />
-          <ul class="services-tag">
-            <li>Web</li>
-            <li>Graphic</li>
-            <li>SEO</li>
-          </ul>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto
-            deserunt harum quo laudantium enim corrupti rerum.
-          </p>
+      </div>
+      <div class="skills">
+        <div class="info">
+          <p><span class="list"></span>Javascript</p>
+          <span class="porcentaje">50%</span>
+        </div>
+        <div class="barra">
+          <div id="js" class="barra-progreso2"></div>
+        </div>
+      </div>
+      <div class="skills">
+        <div class="info">
+          <p><span class="list"></span>Photoshop</p>
+          <span class="porcentaje">40%</span>
+        </div>
+        <div class="barra">
+          <div id="ps" class="barra-progreso3"></div>
+        </div>
+      </div>
+      <div class="skills">
+        <div class="info">
+          <p><span class="list"></span>Base de datos</p>
+          <span class="porcentaje">30%</span>
+        </div>
+        <div class="barra">
+          <div id="basedata" class="barra-progreso4"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- SECTION PORTFOLIO -->
+
+    <section class="portfolio">
+      <h3 class="title-portfolio">MIS PROYECTOS</h3>
+      <div class="fila-portfolio">
+        <div class="proyect">
+          <div class="overlay"></div>
+          <img src="img/proyecto1.jpg" alt="" />
+          <div class="info-proyect">
+            <h4>Project description</h4>
+            <p>Diseño web</p>
+          </div>
+        </div>
+        <div class="proyect">
+          <div class="overlay"></div>
+          <img src="img/proyecto2.jpg" alt="" />
+          <div class="info-proyect">
+            <h4>Project description</h4>
+            <p>Diseño web</p>
+          </div>
+        </div>
+        <div class="proyect">
+          <div class="overlay"></div>
+          <img src="img/proyecto3.jpg" alt="" />
+          <div class="info-proyect">
+            <h4>Project description</h4>
+            <p>Diseño web</p>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- SECTION CONTACT -->
+
+    <section></section>
   </body>
 </html>
