--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="fila">
         <div class="service">
           <span class="icon"><i class="fa-solid fa-code"></i></span>
-          <h4>Website Design</h4>
+          <h4>Html</h4>
           <hr />
           <ul class="services-tag">
             <li>Web</li>
@@ -128,7 +128,7 @@
         </div>
         <div class="service">
           <span class="icon"><i class="fa-solid fa-code"></i></span>
-          <h4>Website Design</h4>
+          <h4>Css</h4>
           <hr />
           <ul class="services-tag">
             <li>Web</li>
@@ -142,7 +142,7 @@
         </div>
         <div class="service">
           <span class="icon"><i class="fa-solid fa-code"></i></span>
-          <h4>Website Design</h4>
+          <h4>Javascript</h4>
           <hr />
           <ul class="services-tag">
             <li>Web</li>
