--- a/index.html
+++ b/index.html
@@ -19,78 +19,75 @@
   </head>
   <body>
     <!--SECCION DE INICIO-->
-    <section class="home">
-      <div class="content">
-        <header>
-          <div class="content-header">
-            <h1>/AO/</h1>
-            <nav class="navbar">
-              <ul class="links">
-                <li>
-                  <a
-                    href="#home"
-                    class="seleccionado"
-                    onclick="seleccionar(this)"
-                    >Home</a
-                  >
-                </li>
-                <li>
-                  <a href="#aboutme" onclick="seleccionar(this)">About</a>
-                </li>
-                <li>
-                  <a href="#services" onclick="seleccionar(this)">Services</a>
-                </li>
-                <li>
-                  <a href="#portfolio" onclick="seleccionar(this)">Portfolio</a>
-                </li>
-                <li>
-                  <a href="#contact" onclick="seleccionar(this)">Contact</a>
-                </li>
-              </ul>
-            </nav>
+    <section class="main">
+      <header>
+        <div class="content-header">
+          <nav class="navbar">
+            <ul class="links">
+              <li style="--clr: #ff5000">
+                <a href="#" data-text="&nbsp;Home">&nbsp;Home&nbsp;</a>
+              </li>
+              <li style="--clr: #ff5000">
+                <a href="#" data-text="&nbsp;About">&nbsp;About&nbsp;</a>
+              </li>
+              <li style="--clr: #ff5000">
+                <a href="#" data-text="&nbsp;Services">&nbsp;Services&nbsp;</a>
+              </li>
+              <li style="--clr: #ff5000">
+                <a href="#" data-text="&nbsp;Portfolio"
+                  >&nbsp;Portfolio&nbsp;</a
+                >
+              </li>
+              <li style="--clr: #ff5000">
+                <a href="#" data-text="&nbsp;Contact">&nbsp;Contact&nbsp;</a>
+              </li>
+            </ul>
+          </nav>
 
-            <!--ICONOS RESPONSIVE-->
-            <div class="icon-nav" onclick="responsiveMenu()">
-              <i class="fa-solid fa-bars"></i>
-            </div>
-
-            <!--Iconos de redes sociales-->
-            <div class="redes">
-              <a
-                href="https://www.facebook.com/profile.php?id=100042817663563"
-                target="_blank"
-                ><i class="fa-brands fa-facebook"></i
-              ></a>
-              <a href="https://www.instagram.com/_poncho07/" target="_blank"
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-              <a href="https://twitter.com/Alfonso_Ortiz07" target="_blank"
-                ><i class="fa-brands fa-twitter"></i
-              ></a>
-            </div>
+          <!--Iconos de redes sociales-->
+          <div class="redes">
+            <a
+              href="https://www.facebook.com/profile.php?id=100042817663563"
+              target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="https://www.instagram.com/_poncho07/" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://twitter.com/Alfonso_Ortiz07" target="_blank"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
           </div>
-        </header>
-        <div class="presentation">
-          <p class="bienvenida">Bievenidos</p>
-          <h2>Soy <span> Alfonso Ortiz</span> Desarrollador web</h2>
-          <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla
-            aliquid veritatis impedit, quia deleniti eius iusto illum, iure
-            itaque facilis saepe! Modi, consequatur quae? Accusantium eligendi
-            odio voluptate labore?
-          </p>
-          <a href="#portfolio">Ir a portafolio</a>
+          <i class="fa-solid fa-bars icon-nav"></i>
         </div>
+      </header>
+
+      <!-- ABOUT ME -->
+      <div id="aboutme" class="presentation">
+        <p class="bienvenida">Bievenidos</p>
+        <h2>Soy <span> Alfonso Ortiz</span> Desarrollador web</h2>
+        <p class="description">
+          Desarrollador Full Stack en formación con conocimientos en HTML, CSS y
+          JavaScript. Soy una persona a la que le gusta reinventarse
+          constantemente en busca de alcanzar un mejor desempeño.
+        </p>
+
+        <p class="description">
+          Mi perfil está orientado al logro, la proactividad, la resolución de
+          problemas y un espíritu de aprendizaje constante. He encontrado una
+          gran pasión por el desarrollo web y la implementación de aplicaciones
+          que busquen suplir sus necesidades sociales. Busco oportunidades que
+          me permitan aprender cada día a través de restos, trabajar en equipo y
+          complementar mis conocimientos para el bien común
+        </p>
+        <a href="#portfolio">Ir a portafolio</a>
       </div>
     </section>
 
     <!-- SECCION SOBRE MI -->
     <section class="aboutme">
       <div class="content-photo">
-        <img
-          src="img/312094563_839161184187796_2347894988372414200_n.jpg"
-          alt=""
-        />
+        <img src="./img/Me.png" alt="" />
       </div>
 
       <div class="about-me">
@@ -164,7 +161,7 @@
       <div class="skills">
         <div class="info">
           <p><span class="list"></span>Html & Css</p>
-          <span class="porcentaje">50%</span>
+          <span class="porcentaje">80%</span>
         </div>
         <div class="barra">
           <div id="html" class="barra-progreso1"></div>
@@ -186,15 +183,6 @@
         </div>
         <div class="barra">
           <div id="ps" class="barra-progreso3"></div>
-        </div>
-      </div>
-      <div class="skills">
-        <div class="info">
-          <p><span class="list"></span>Base de datos</p>
-          <span class="porcentaje">30%</span>
-        </div>
-        <div class="barra">
-          <div id="basedata" class="barra-progreso4"></div>
         </div>
       </div>
     </div>
