--- a/index.html
+++ b/index.html
@@ -194,10 +194,16 @@
       <div class="fila-portfolio">
         <div class="proyect">
           <div class="overlay"></div>
-          <img src="img/proyecto1.jpg" alt="" />
+          <img src="img/eCommers.jpeg" alt="" />
           <div class="info-proyect">
-            <h4>Project description</h4>
-            <p>Diseño web</p>
+            <h4>
+              <a
+                href="https://ecommers-store-academlo.netlify.app/"
+                target="_blank"
+                >eCommers</a
+              >
+            </h4>
+            <p>Proyecto diseñado para aprobar módulo fundamentos</p>
           </div>
         </div>
         <div class="proyect">
